[Refactor] call API with WebClient instead of RestTemplate